[project]
name = "learn-autogen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "autogen-agentchat>=0.5.7",
    "autogen-ext[mcp]>=0.5.7",
    "autogenstudio==0.4.2.2",
    "ipykernel>=6.30.1",
    "langchain-experimental>=0.3.4",
]
